--- a/public/style.css
+++ b/public/style.css
@@ -1,103 +1,150 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
-*{
-    box-sizing: border-box;
-}
-:root{
-    --primary-color:#22254b;
-    --secondry-color:#373b69;
-}
-body{
-    background-color: var(--secondry-color);
-    margin:0;
-    font-family:'Poppins',sans-serif;
+
+* {
+  box-sizing: border-box;
 }
 
-.myheader{
-    padding: 1rem;
-    display: flex;
-    justify-content:flex-end;
-    background-color: var(--primary-color);
+:root {
+  --primary-color: #22254b;
+  --secondry-color: #373b69;
+}
+
+body {
+  background-color: var(--secondry-color);
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.myheader {
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  background-color: var(--primary-color);
 }
 
 .myheader h1 {
   margin: 0;
-  padding-right: 1000px;
+  padding-right: 1rem;
+  color: #fff;
+  font-size: 1.5rem;
 }
 
-.search{
-    background-color: transparent;
-    border: 2px solid var(--secondry-color);
-    padding:0.5rem 1rem;
-    border-radius: 50px;
-    font-size: 1rem;
-    color:#fff;
-    font-family: inherit;
-}
-.search:focus{
-    outline: 0;
-    background-color: var(--primary-color);
-}
-.search::placeholder{
-    color: #7378c5;
+.search {
+  background-color: transparent;
+  border: 2px solid var(--secondry-color);
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  font-size: 1rem;
+  color: #fff;
+  font-family: inherit;
 }
 
-.movie{
-    width: 300px;
-    margin:1rem;
-    border-radius: 3px;
-    box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
-    background-color: var(--primary-color);
-    position: relative;
-    overflow: hidden;
+.search:focus {
+  outline: 0;
+  background-color: var(--primary-color);
 }
 
-.movie img{
-    width: 300px;
-
-}
-main{
-    padding-left: 5.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-self: center;
-}
-.movie-info{
-    color: antiquewhite;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 1rem 1rem;
-    letter-spacing: 0.1rem;
-}
-.movie-info span{
-    background-color: var(--secondry-color);
-    padding: 0.25rem 0.5rem;
-    border-radius: 3px;
-    font-weight: bold;
+.search::placeholder {
+  color: #7378c5;
 }
 
-
-.movie-info span.green{
-    color:lightgreen;
-}
-.movie-info span.orange{
-    color:orange;
-}
-.movie-info span.red{
-    color:red;
-}
-.overview{
-    position: absolute;
-    left:0;
-    right:0;
-    bottom: 0;
-    background-color: #fff;
-    padding:1rem;
-    max-height: 100%;
-    transform: translate(101%);
-    transition: transform 0.3s ease-in-out;
+.movie {
+  width: 300px;
+  margin: 1rem;
+  border-radius: 3px;
+  box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-color);
+  position: relative;
+  overflow: hidden;
 }
 
-.movie:hover .overview{
-    transform: translate(0);
+.movie img {
+  width: 300px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.movie-info {
+  color: antiquewhite;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.1rem;
+}
+
+.movie-info span {
+  background-color: var(--secondry-color);
+  padding: 0.25rem 0.5rem;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
+.movie-info span.green {
+  color: lightgreen;
+}
+
+.movie-info span.orange {
+  color: orange;
+}
+
+.movie-info span.red {
+  color: red;
+}
+
+.overview {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  padding: 1rem;
+  max-height: 100%;
+  transform: translate(101%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .overview {
+  transform: translate(0);
+}
+
+/* Media queries for responsive layout */
+@media screen and (max-width: 768px) {
+  main {
+    padding-left: 0;
+    justify-content: center;
+  }
+  .myheader {
+    justify-content: right;
+  }
+  .myheader h1 {
+    padding-right: 0;
+  }
+  .search {
+    width: 40%;
+  }
+  .movie {
+    width: 90%;
+  }
+  .movie img {
+    width: 100%;
+  }
+}
+
+/* Additional styles for "Movies" button at top left */
+#moviesButton {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 0.5rem 3rem;
+  border: none;
+  border-radius: 3px;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
